Fixed logo horiz alignment

--- a/blocks/logo/logo.styl
+++ b/blocks/logo/logo.styl
@@ -1,16 +1,21 @@
 .logo
-    background-image: url('logo.svg')
-    background-repeat: no-repeat
-    height: 40px
     display: block
-    width: 104px
     float: left
-    text-decoration: none
+
+    &__image
+        height: 40px
+        width: 46px
+        vertical-align: top
+        background-image: url('logo.svg')
+        background-repeat: no-repeat
+        display: inline-block
 
     &__text
+        display: inline-block
         color: #fff
         font-family: Arial, sans-serif
         font-size: 12px
         letter-spacing: .02em
         line-height: 13px
-        margin-left: 56px
+        margin-left: 10px
+        margin-top: 1px
